--- a/Back/30 - React Proyects/List-Tasks/src/index.css
+++ b/Back/30 - React Proyects/List-Tasks/src/index.css
@@ -12,11 +12,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-	/* outline: 1px solid red; */
+  /* outline: 1px solid red; */
 }
 
 a {
@@ -24,6 +25,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -34,6 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
 }
 
 h1 {
@@ -52,9 +55,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -68,10 +73,30 @@ button:focus-visible {
     /* background-color: #5a6677; */
     background-color: color-mix(in oklab, #0af 15%, lch(20% 0 0));
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
+
+}
+@media(prefers-color-scheme: dark) {
+
+  :root {
+    --brand: #0af;
+    color: #213547;
+    background-color: color-mix(in oklab, #0af 15%, lch(20% 0 0));
+  }
+
+  a:hover {
+    color: #747bff;
+  }
+
+  button {
+    background-color: #f9f9f9;
+  }
+
 }
